--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -36,6 +36,8 @@
     "tailwind-merge": "^3.3.1",
     "tmp": "^0.2.5",
     "typeorm": "^0.3.27",
+    "uuid": "^13.0.0",
+    "winston": "^3.18.3",
     "zod": "^4.1.11"
   },
   "devDependencies": {
