feat(server): implement storing files and data into db in STOW-RS
- Add new services for managing DICOM instances, patients, studies, and series
- Implement DICOM file saving logic with database integration
- Introduce utility functions for DICOM JSON mapping and file path generation
- Replace default `@remix-run/multipart-parser` with custom one to avoid loading entire file into memory
- Add `verifyWorkspaceExists` middleware in `STOW-RS` route
- Introduce StowRsResponseMessage schema

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,17 +12,19 @@
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@auth/typeorm-adapter": "^2.10.0",
-    "@brigid/database": "workspace:*",
+    "@brigid/database": "workspace:^",
     "@brigid/env": "workspace:*",
     "@brigid/types": "workspace:^",
     "@hono/auth-js": "^1.1.0",
     "@hono/standard-validator": "^0.1.5",
     "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-validator": "^0.7.3",
-    "@remix-run/multipart-parser": "^0.11.0",
+    "@remix-run/multipart-parser": "workspace:^",
     "@types/tmp": "^0.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fs-extra": "^11.3.2",
+    "hasha": "^7.0.0",
     "hono": "^4.9.9",
     "hono-openapi": "^1.1.0",
     "jsonpath-plus": "^10.3.0",
