feat(server): implement s3 storage provider
- Implement `S3StorageProvider` for file uploads and downloads
- Update DICOM file path generation to include workspace ID
- Modify MultipartFile interface to include mediaType for s3
- Refactor file saving logic to support S3 storage
- Enhance error handling and logging during file operations

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@auth/core": "^0.40.0",
     "@auth/typeorm-adapter": "^2.10.0",
+    "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/lib-storage": "^3.905.0",
     "@brigid/database": "workspace:^",
     "@brigid/env": "workspace:*",
     "@brigid/types": "workspace:^",
