--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "7zip-min": "^2.1.0",
     "@auth/core": "^0.40.0",
     "@auth/typeorm-adapter": "^2.10.0",
     "@aws-sdk/client-s3": "^3.901.0",
@@ -23,6 +24,7 @@
     "@hono/zod-validator": "^0.7.3",
     "@remix-run/multipart-parser": "workspace:^",
     "@types/tmp": "^0.2.6",
+    "bl": "^6.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fs-extra": "^11.3.2",
@@ -32,6 +34,7 @@
     "jsonpath-plus": "^10.3.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
+    "multistream": "^4.1.0",
     "next": "15.5.4",
     "pg": "^8.16.3",
     "raccoon-dcm4che-bridge": "^0.6.4",
@@ -48,7 +51,9 @@
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/formidable": "^3.4.5",
+    "@types/fs-extra": "^11.0.4",
     "@types/lodash": "^4.17.20",
+    "@types/multistream": "^4.1.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
