--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "@hono/standard-validator": "^0.1.5",
     "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-validator": "^0.7.3",
+    "@imagemagick/magick-wasm": "^0.0.36",
     "@remix-run/multipart-parser": "workspace:^",
     "@types/tmp": "^0.2.6",
     "bl": "^6.1.3",
