--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "bl": "^6.1.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "desm": "^1.3.1",
     "fs-extra": "^11.3.2",
     "hasha": "^7.0.0",
     "hono": "^4.9.9",
