--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,7 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "test:backend": "vitest --config vitest.backend.config.mts"
   },
   "dependencies": {
     "7zip-min": "^2.1.0",
@@ -26,6 +27,7 @@
     "@remix-run/multipart-parser": "workspace:^",
     "@types/tmp": "^0.2.6",
     "bl": "^6.1.3",
+    "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "desm": "^1.3.1",
@@ -42,6 +44,7 @@
     "raccoon-dcm4che-bridge": "^0.6.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^3.3.1",
     "tmp": "^0.2.5",
     "typeorm": "^0.3.27",
@@ -61,6 +64,7 @@
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   }
 }
