--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -18,6 +18,7 @@
     "class-validator": "^0.14.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.27",
     "typeorm-pglite": "^0.3.2"
   }
