--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -13,6 +13,7 @@
   "packageManager": "pnpm@10.7.1",
   "dependencies": {
     "@brigid/env": "workspace:*",
+    "@brigid/types": "workspace:^",
     "@electric-sql/pglite": "^0.3.10",
     "better-sqlite3": "^12.4.1",
     "class-validator": "^0.14.2",
