--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -15,6 +15,7 @@
     "incremental": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "allowImportingTsExtensions": true,
     "plugins": [
       {
         "name": "next"
