--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,9 @@ packages:
   - ./apps/web/**
   - '!./apps/brigid-desktop*/**'
 onlyBuiltDependencies:
+  - '@tailwindcss/oxide'
   - better-sqlite3
   - esbuild
+  - sharp
   - sqlite3
+nodeLinker: hoisted
