--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev --turbopack -p 3119",
-    "build": "next build --turbopack",
+    "build": "next build --turbopack && tsx postbuild.ts",
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
