--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -5,7 +5,7 @@
   "main": "src/dataSource.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "typeorm": "tsx ./node_modules/typeorm/cli.js"
+    "typeorm": "tsx ../../node_modules/typeorm/cli.js"
   },
   "keywords": [],
   "author": "",
