--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -17,6 +17,7 @@
     "@electric-sql/pglite": "^0.3.10",
     "better-sqlite3": "^12.4.1",
     "class-validator": "^0.14.2",
+    "date-fns": "^4.1.0",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
