feat(wado-rs): add `retrieveFramePixelData` route
- Introduced `retrieveFramePixelDataRoute` for retrieving pixel data frames via WADO-RS
- Implemented `RawConverter` for converting DICOM frames to raw format
- Updated output format handling to include "raw" and adjusted related utilities

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
     "hasha": "^7.0.0",
     "hono": "^4.9.9",
     "hono-openapi": "^1.1.0",
+    "java-bridge": "^2.8.0",
     "jsonpath-plus": "^10.3.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
