--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,13 +24,21 @@
     "@hono/swagger-ui": "^0.5.2",
     "@hono/zod-validator": "^0.7.3",
     "@imagemagick/magick-wasm": "^0.0.36",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@remix-run/multipart-parser": "workspace:^",
+    "@tanstack/react-query": "^5.90.5",
     "@types/tmp": "^0.2.6",
     "bl": "^6.1.3",
     "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "desm": "^1.3.1",
+    "embla-carousel-react": "^8.6.0",
     "fs-extra": "^11.3.2",
     "hasha": "^7.0.0",
     "hono": "^4.9.9",
@@ -51,7 +59,8 @@
     "typeorm": "^0.3.27",
     "uuid": "^13.0.0",
     "winston": "^3.18.3",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
