--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "@hono/zod-validator": "^0.7.3",
     "@imagemagick/magick-wasm": "^0.0.36",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -34,6 +35,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@remix-run/multipart-parser": "workspace:^",
     "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-table": "^8.21.3",
     "@types/tmp": "^0.2.6",
     "bl": "^6.1.3",
     "class-validator": "^0.14.2",
