--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -52,6 +52,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.544.0",
     "multistream": "^4.1.0",
+    "nanoid": "^5.1.6",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "pg": "^8.16.3",
