--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -29,7 +29,9 @@
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -41,6 +43,8 @@
     "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "desm": "^1.3.1",
     "embla-carousel-react": "^8.6.0",
     "fs-extra": "^11.3.2",
@@ -58,6 +62,7 @@
     "pg": "^8.16.3",
     "raccoon-dcm4che-bridge": "^0.7.0",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
     "sqlite3": "^5.1.7",
