--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": ["**", "!**/node_modules", "!**/.next", "!**/dist", "!**/build", "!**/out", "!**/.turbo"]
+    "includes": ["**", "!**/node_modules", "!**/.next", "!**/dist", "!**/build", "!**/out", "!**/.turbo", "!!**/public/html/bluelight"]
   },
   "formatter": {
     "enabled": true,
