--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": ["**", "!**/node_modules", "!**/.next", "!**/dist", "!**/build", "!**/out", "!**/.turbo", "!!**/public/html/bluelight"]
+    "includes": ["**", "!**/node_modules", "!**/.next", "!**/dist", "!**/build", "!**/out", "!**/.turbo"]
   },
   "formatter": {
     "enabled": true,
@@ -33,5 +33,13 @@
         "organizeImports": "on"
       }
     }
-  }
+  },
+  "overrides": [
+    {
+      "includes": ["**/public/html/bluelight/**"],
+      "linter": {
+        "enabled": false
+      }
+    }
+  ]
 }
