feat(dimse): add c-echo dimse service
- Added DIMSE configuration schema to environment variables
- Implemented DIMSE application class
- Updated workspace configuration to include DIMSE package
- Enhanced instrumentation to start DIMSE application when starting up

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 packages:
   - ./packages/*
   - ./apps/web/**
+  - ./apps/dimse/**
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - better-sqlite3
