--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
         "@aws-sdk/client-s3": "^3.901.0",
         "@aws-sdk/lib-storage": "^3.905.0",
         "@brigid/database": "workspace:^",
+        "@brigid/dimse": "workspace:^",
         "@brigid/env": "workspace:*",
         "@brigid/types": "workspace:^",
         "@hono/auth-js": "^1.1.0",
