--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:web": "pnpm --filter @brigid/web build && pnpm copy-files:web",
+    "copy-files:web": "cpy \"public/**\" \".next/standalone/apps/web/public\" --cwd=apps/web && cpy \".next/static/**\" \".next/standalone/apps/web/.next/static\" --cwd=apps/web"
   },
   "keywords": [],
   "author": "Li70",
@@ -12,6 +14,7 @@
   "packageManager": "pnpm@10.7.1",
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
+    "cpy-cli": "^6.0.0",
     "tsx": "^4.20.6"
   },
   "dependencies": {
