--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -82,6 +82,7 @@
         "typeorm": "^0.3.27",
         "uuid": "^13.0.0",
         "winston": "^3.18.3",
+        "winston-transport": "^4.9.0",
         "xmlbuilder2": "^4.0.3",
         "zod": "^4.1.11",
         "zustand": "^5.0.8"
