--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
-    "typeorm": "^0.3.27"
+    "typeorm": "^0.3.27",
+    "uuid": "^13.0.0"
   }
 }
