feat(build): add sea build workflow and example environment configuration
- Introduced a script for building a single executable application for different platforms
- Added an example environment configuration file for application settings
- Updated .gitignore to exclude temporary build directories

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:web": "pnpm --filter @brigid/web build && pnpm copy-files:web",
-    "copy-files:web": "cpy \"public/**\" \".next/standalone/apps/web/public\" --cwd=apps/web && cpy \".next/static/**\" \".next/standalone/apps/web/.next/static\" --cwd=apps/web"
+    "build:web": "pnpm --filter @brigid/web build",
+    "copy-files:web": "cpy \"public/**\" \".next/standalone/apps/web/public\" --cwd=apps/web && cpy \".next/static/**\" \".next/standalone/apps/web/.next/static\" --cwd=apps/web",
+    "build:sea": "pnpm copy-files:web && tsx scripts/seaWorkflow/buildSea.ts"
   },
   "keywords": [],
   "author": "Li70",
