feat(build): enhance sea build process with optional JRE inclusion
- Added a new script command `build:sea-with-jre` to build the application with an embedded JRE
- Updated the `buildSea` function to conditionally include JRE based on command-line argument
- Implemented JRE download and extraction logic, ensuring compatibility across platforms.
- Improved packaging process to handle JRE files appropriately

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:web": "pnpm --filter @brigid/web build",
     "copy-files:web": "cpy \"public/**\" \".next/standalone/apps/web/public\" --cwd=apps/web && cpy \".next/static/**\" \".next/standalone/apps/web/.next/static\" --cwd=apps/web",
-    "build:sea": "pnpm copy-files:web && tsx scripts/seaWorkflow/buildSea.ts"
+    "build:sea": "pnpm copy-files:web && tsx scripts/seaWorkflow/buildSea.ts",
+    "build:sea-with-jre": "pnpm copy-files:web && tsx scripts/seaWorkflow/buildSea.ts --with-jre"
   },
   "keywords": [],
   "author": "Li70",
