--- a/package.json
+++ b/package.json
@@ -8,7 +8,45 @@
     "build:web": "pnpm --filter @brigid/web build",
     "copy-files:web": "cpy \"public/**\" \".next/standalone/apps/web/public\" --cwd=apps/web && cpy \".next/static/**\" \".next/standalone/apps/web/.next/static\" --cwd=apps/web",
     "build:sea": "pnpm copy-files:web && tsx scripts/seaWorkflow/buildSea.ts",
-    "build:sea-with-jre": "pnpm copy-files:web && tsx scripts/seaWorkflow/buildSea.ts --with-jre"
+    "build:sea-with-jre": "pnpm copy-files:web && tsx scripts/seaWorkflow/buildSea.ts --with-jre",
+    "release": "commit-and-tag-version"
+  },
+  "commit-and-tag-version": {
+    "skip": {
+      "commit": true,
+      "tag": true
+    },
+    "types": [
+      {
+        "type": "feat",
+        "section": "Features",
+        "hidden": false
+      },
+      {
+        "type": "fix",
+        "section": "Bug Fixes",
+        "hidden": false
+      },
+      {
+        "type": "chore",
+        "section": "Others",
+        "hidden": false
+      },
+      {
+        "type": "docs",
+        "section": "Documentation",
+        "hidden": false
+      },
+      {
+        "type": "refactor",
+        "section": "Refactor",
+        "hidden": false
+      },
+      {
+        "type": "style",
+        "hidden": false
+      }
+    ]
   },
   "keywords": [],
   "author": "Li70",
@@ -16,6 +54,7 @@
   "packageManager": "pnpm@10.7.1",
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
+    "commit-and-tag-version": "^12.6.1",
     "cpy-cli": "^6.0.0",
     "tsx": "^4.20.6"
   },
