feat(build): add OpenCV libraries for multiple platforms
- Added OpenCV shared libraries for Windows, macOS, and Linux to the project
- Updated the Dockerfile to copy OpenCV libraries to the JDK's lib directory
- Modified the example environment file to change the local storage directory path

--- a/.dockerignore
+++ b/.dockerignore
@@ -89,3 +89,6 @@ apps/web/configs/logback.xml
 # Single Executable Application
 **/seaTmp/**
 **/brigid-local-db/**
+
+data/**/*.dll
+data/**/*.dylib
