--- a/apps/web/env.example
+++ b/apps/web/env.example
@@ -21,7 +21,7 @@ TYPEORM_CONNECTION=better-sqlite3://./bridge-local-db/data.db
 # Storage
 # STORAGE_PROVIDER=s3
 STORAGE_PROVIDER=local
-STORAGE_LOCAL_DIR=/files
+STORAGE_LOCAL_DIR=./dicom-files
 # S3_ENDPOINT=endpoing
 # S3_BUCKET=brigid
 # S3_ACCESS_KEY=access_key
