docs(fd): add first version docs for project with fumadocs

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,7 @@
 packages:
   - ./packages/*
   - ./apps/web/**
-  - ./apps/dimse/**
+  - ./apps/docs/**
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - better-sqlite3
