--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "includes": ["**", "!**/node_modules", "!**/.next", "!**/dist", "!**/build", "!**/out", "!**/.turbo"]
+    "includes": ["**", "!**/node_modules", "!**/.next", "!**/dist", "!**/build", "!**/out", "!**/.turbo", "!**/apps/docs"]
   },
   "formatter": {
     "enabled": true,
