--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,7 +41,7 @@ jobs:
           node-version: 22
           cache: 'pnpm'
       - name: Install dependencies
-        run: pnpm install --filter "!@brigid/docs"
+        run: pnpm install --filter "!@brigid/docs" --filter "!@brigid/video"
       - name: Build Web application
         run: pnpm build:web
       - name: Build SEA application
