--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,6 +2,7 @@ packages:
   - ./packages/*
   - ./apps/web/**
   - ./apps/docs/**
+  - ./apps/video
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - better-sqlite3
